force-app/main/default/objects/RW_Presales_WhatsApp__mdt/RW_Presales_WhatsApp__mdt.object-meta.xml
<CustomObject>
    <label>Presales WhatsApp</label>
    <pluralLabel>Presales WhatsApp</pluralLabel>
</CustomObject>