force-app/main/default/objects/RW_Presales_WhatsApp__mdt/fields/Message_Content__c.field-meta.xml
<CustomField>
    <fullName>Message_Content__c</fullName>
    <label>Message Content</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>