force-app/main/default/objects/RW_Presales_WhatsApp__mdt/fields/RW_element_name__c.field-meta.xml
<CustomField>
    <fullName>RW_element_name__c</fullName>
    <label>element_name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>