force-app/main/default/objects/RW_Presales_WhatsApp__mdt/fields/RW_namespace__c.field-meta.xml
<CustomField>
    <fullName>RW_namespace__c</fullName>
    <label>namespace</label>
    <length>255</length>
    <type>Text</type>
</CustomField>